@@ -8,7 +8,6 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.data.redis.core.StringRedisTemplate;
-import org.springframework.messaging.simp.SimpMessagingTemplate;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 import org.springframework.web.reactive.socket.WebSocketMessage;
@@ -26,7 +25,6 @@ public class OkxCandlestickService {
     private static final Logger logger = LoggerFactory.getLogger(OkxCandlestickService.class);
 
     private final StringRedisTemplate redisTemplate;
-    private final SimpMessagingTemplate messagingTemplate;
     private final ObjectMapper mapper = new ObjectMapper();
     private final ReactorNettyWebSocketClient client = new ReactorNettyWebSocketClient();
     private final RestTemplate restTemplate = new RestTemplate();
@@ -34,15 +32,47 @@ public class OkxCandlestickService {
     @Value("${okx.api.websocket-url}")
     private String websocketUrl;
 
-    public OkxCandlestickService(StringRedisTemplate redisTemplate, SimpMessagingTemplate messagingTemplate) {
+    public OkxCandlestickService(StringRedisTemplate redisTemplate) {
         this.redisTemplate = redisTemplate;
-        this.messagingTemplate = messagingTemplate;
     }
 
     @PostConstruct
     public void init() {
+        updateCmcMetadata();
         fetchHistoricalCandlesticks();
         subscribeToCandlesticks();
+    }
+
+    private void updateCmcMetadata() {
+        String cmcData = redisTemplate.opsForValue().get("crypto:latest");
+        if (cmcData == null) {
+            logger.warn("No CMC data available for metadata");
+            return;
+        }
+
+        try {
+            JsonNode root = mapper.readTree(cmcData);
+            JsonNode dataArray = root.get("data");
+            if (dataArray == null || !dataArray.isArray()) {
+                logger.warn("Invalid CMC data format");
+                return;
+            }
+
+            for (JsonNode coin : dataArray) {
+                String symbol = coin.get("symbol").asText();
+                String logo = coin.has("logo") ? coin.get("logo").asText() : null;
+                String supply = coin.has("circulating_supply") ? coin.get("circulating_supply").asText() : null;
+                if (logo != null) {
+                    redisTemplate.opsForValue().set("logo:" + symbol, logo);
+                }
+                if (supply != null) {
+                    redisTemplate.opsForValue().set("supply:" + symbol, supply);
+                }
+            }
+            logger.info("Updated CMC metadata for {} coins", dataArray.size());
+        } catch (Exception e) {
+            logger.error("Error updating CMC metadata: {}", e.getMessage());
+        }
     }
 
     private void fetchHistoricalCandlesticks() {
@@ -88,10 +118,7 @@ public class OkxCandlestickService {
             return;
         }
 
-        List<String> topPairs = validPairs.stream()
-                .filter(pair -> Arrays.asList("BTC-USDT", "ETH-USDT", "SOL-USDT", "XRP-USDT", "BNB-USDT", "ADA-USDT").contains(pair))
-                .collect(Collectors.toList());
-
+        List<String> topPairs = getTopPairsByVolume(validPairs, 50);
         if (topPairs.isEmpty()) {
             logger.warn("No top pairs found, retrying in 5s");
             Mono.delay(Duration.ofSeconds(5)).subscribe(v -> subscribeToCandlesticks());
@@ -112,7 +139,7 @@ public class OkxCandlestickService {
 
         try {
             String payload = mapper.writeValueAsString(subscribeMsg);
-            logger.info("Subscribing to candlesticks: {}", payload);
+            logger.info("Subscribing to candlesticks for {} pairs", topPairs.size());
 
             client.execute(
                     URI.create(websocketUrl),
@@ -203,13 +230,27 @@ public class OkxCandlestickService {
                             JsonNode oldestCandle = mapper.readTree(oldestCandleJson);
                             price24hAgo = oldestCandle.get("open").asDouble();
                             percentChange24h = price24hAgo != 0 ? ((close - price24hAgo) / price24hAgo) * 100 : 0.0;
-                            logger.debug("change24h for {}: {}% (price24hAgo={}, close={})", instId, percentChange24h, price24hAgo, close);
+                            logger.debug("Calculated change24h for {}: {}% (close={}, price24hAgo={})",
+                                    instId, percentChange24h, close, price24hAgo);
                         } catch (JsonProcessingException e) {
                             logger.warn("Failed to parse oldest candlestick for {}: {}", instId, e.getMessage());
                         }
                     }
                 } else {
-                    logger.debug("Not enough candlesticks for {}: size={}", instId, size);
+                    logger.debug("Not enough candles for {} to calculate change24h (size={})", instId, size);
+                    String tickerJson = redisTemplate.opsForValue().get("ticker:" + instId);
+                    if (tickerJson != null) {
+                        try {
+                            JsonNode ticker = mapper.readTree(tickerJson);
+                            double lastPrice = ticker.get("last").asDouble();
+                            double open24h = ticker.get("open24h").asDouble();
+                            percentChange24h = open24h != 0 ? ((lastPrice - open24h) / open24h) * 100 : 0.0;
+                            logger.debug("Fallback change24h for {}: {}% (last={}, open24h={})",
+                                    instId, percentChange24h, lastPrice, open24h);
+                        } catch (Exception e) {
+                            logger.warn("Failed to parse ticker for {}: {}", instId, e.getMessage());
+                        }
+                    }
                 }
 
                 String formattedChange = String.format("%.2f", percentChange24h);
@@ -226,6 +267,7 @@ public class OkxCandlestickService {
                 update.put("logo", logo);
                 update.put("circulatingSupply", circulatingSupply != null ? Double.parseDouble(circulatingSupply) : null);
                 update.put("timestamp", timestamp);
+                update.put("volume24h", volume);
 
                 try {
                     String updateJson = mapper.writeValueAsString(update);
@@ -247,16 +289,61 @@ public class OkxCandlestickService {
             String response = restTemplate.getForObject(url, String.class);
             JsonNode root = mapper.readTree(response);
             List<String> pairs = new ArrayList<>();
+            List<Map<String, Object>> tickers = new ArrayList<>();
             for (JsonNode ticker : root.get("data")) {
                 String instId = ticker.get("instId").asText();
                 if (instId.endsWith("-USDT")) {
                     pairs.add(instId);
+                    Map<String, Object> tickerData = new HashMap<>();
+                    tickerData.put("instId", instId);
+                    tickerData.put("last", ticker.get("last").asDouble());
+                    tickerData.put("open24h", ticker.get("open24h").asDouble());
+                    tickerData.put("vol24h", ticker.get("vol24h").asDouble());
+                    tickers.add(tickerData);
+                    try {
+                        redisTemplate.opsForValue().set("ticker:" + instId, mapper.writeValueAsString(tickerData));
+                    } catch (JsonProcessingException e) {
+                        logger.warn("Failed to store ticker for {}: {}", instId, e.getMessage());
+                    }
                 }
             }
+            try {
+                redisTemplate.opsForValue().set("tickers:latest", mapper.writeValueAsString(tickers));
+                logger.info("Stored tickers:latest with {} entries", tickers.size());
+            } catch (JsonProcessingException e) {
+                logger.error("Failed to store tickers:latest: {}", e.getMessage());
+            }
+            logger.info("Fetched {} valid OKX spot pairs", pairs.size());
             return pairs;
         } catch (Exception e) {
             logger.error("Error fetching OKX pairs: {}", e.getMessage());
-            return List.of("BTC-USDT", "ETH-USDT", "SOL-USDT", "XRP-USDT");
+            return Arrays.asList("BTC-USDT", "ETH-USDT", "SOL-USDT", "XRP-USDT", "BNB-USDT", "ADA-USDT");
+        }
+    }
+
+    private List<String> getTopPairsByVolume(List<String> validPairs, int limit) {
+        try {
+            String url = "https://www.okx.com/api/v5/market/tickers?instType=SPOT";
+            String response = restTemplate.getForObject(url, String.class);
+            JsonNode root = mapper.readTree(response);
+            List<Map<String, Object>> tickers = new ArrayList<>();
+            for (JsonNode ticker : root.get("data")) {
+                String instId = ticker.get("instId").asText();
+                if (validPairs.contains(instId)) {
+                    Map<String, Object> tickerData = new HashMap<>();
+                    tickerData.put("instId", instId);
+                    tickerData.put("vol24h", ticker.get("vol24h").asDouble());
+                    tickers.add(tickerData);
+                }
+            }
+            tickers.sort((a, b) -> Double.compare((Double) b.get("vol24h"), (Double) a.get("vol24h")));
+            return tickers.stream()
+                    .limit(limit)
+                    .map(t -> (String) t.get("instId"))
+                    .collect(Collectors.toList());
+        } catch (Exception e) {
+            logger.error("Error fetching top pairs by volume: {}", e.getMessage());
+            return validPairs.stream().limit(limit).collect(Collectors.toList());
         }
     }
 }
